ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "level2-project"
  namespace: test
  annotations: 
     ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    http:
      paths:
        path: /office
        backend:
          serviceName: office-service
          servicePort: 80
          paths:
        path: /
        backend:
          serviceName: project-assessment-site
          servicePort: 80
          paths:
        path: /role
        backend:
          serviceName: role-service
          servicePort: 80
          paths:
        path: /department
        backend:
          serviceName: department-service
          servicePort: 80
          paths:
        path: /person
        backend:
          serviceName: person-service
          servicePort: 80
